CSS fixes for alignment/widths

--- a/themes/furnitheme/css/blocks.css
+++ b/themes/furnitheme/css/blocks.css
@@ -68,7 +68,7 @@ h2.block-title { /* Block title */
 #block-search-form { /* "Search form" block */
 	display: inline;
 	float: right;
-	margin: 1em 3em 0 0;
+	margin: 1em 0 0 0;
 	z-index: 5;
 	position: relative;
 }
